--- a/legacybook-backend/.env
+++ b/legacybook-backend/.env
@@ -1,7 +1,3 @@
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=legacybook
-DB_PASSWORD=thush123
-DB_PORT=5432
+DATABASE_URL=postgresql://legacybook_user:HkF6Bap9TGu5bleAMsGVBG9AMesc73sq@dpg-d23hhkje5dus73aktn10-a/legacybook
 JWT_SECRET=your_jwt_secret_key_here
 
